dhall/tests/type-inference/failure/unit/ToMapWrongKind.txt
Type error: error: `toMap` only accepts records of type `Type`
 --> <current file>:1:1
  |
1 | toMap { x = Bool }
  | ^^^^^^^^^^^^^^^^^^ `toMap` only accepts records of type `Type`
  |
